Fixed some styling issues. Mainly with whitespace when scaled out to 4k. Removed picture from Modal. resized some fonts. Fixed margin above button container within the carousel.

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -12,11 +12,12 @@
 }
 
 #root, html {
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     margin: 0;
     padding: 0;
     position: relative;
+    background: #252627;
 }
 
 body {
